add button and JS

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>First</h1>
     <h1>Second</h1>
     <h1 id="third">Third</h1>
+    <button onclick="hello()">OK</button>
+    <script src="index.js"></script>
 </body>
 </html>
